fix spacing

--- a/main.css
+++ b/main.css
@@ -151,7 +151,6 @@ section .intro {
   justify-content: space-around;
 }
 .leadership>.leadership--container {
-  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
